update margin bottom to all p tag under header fix text uneven

--- a/IDAES-UI/src/components/header_component/header.css
+++ b/IDAES-UI/src/components/header_component/header.css
@@ -1,3 +1,7 @@
 .header_each_btn:hover{
   cursor: pointer;
 }
+
+#header p {
+  margin-bottom: 0;
+}
